Correction du contraste sur les textes masqués du carrousel .

--- a/assets/style.css
+++ b/assets/style.css
@@ -260,7 +260,12 @@ form textarea {
 }
 input[type="submit"] {
 	background-color: #BEB45A;
+	color: #000;
 	padding: .5em 1em
+}
+
+.visually-hidden {
+	color: #000;
 }
 
 @media all and (max-width: 1180px) {
